# octo-squirrel

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release-test.yml  release-test2.yml  release.yml
example/: log4rs.yaml
octo-squirrel/: Cargo.toml
octo-squirrel-client/: Cargo.toml
octo-squirrel-client/src/: client.rs  main.rs  vmess.rs
octo-squirrel-client/src/client/: config.rs  dns.rs  handshake.rs  shadowsocks.rs  template.rs  transfer.rs  trojan.rs  vmess.rs
octo-squirrel-client/src/client/template/: handshake.rs
octo-squirrel-server/: Cargo.toml
octo-squirrel-server/src/: main.rs  server.rs
octo-squirrel-server/src/server/: config.rs  shadowsocks.rs  template.rs  trojan.rs  vmess.rs
octo-squirrel-test/: Cargo.toml  README.md
octo-squirrel-test/benches/: encrypt.rs  read_bytes.rs
octo-squirrel-test/src/: test.rs  tracing-client.rs  tracing-server.rs
octo-squirrel-test/src/benches/: encrypt.rs  read_bytes.rs
octo-squirrel/src/: codec.rs  common.rs  config.rs  crypto.rs  lib.rs  log.rs  manager.rs  network.rs  protocol.rs  relay.rs  util.rs
octo-squirrel/src/codec/: aead.rs  chunk.rs  shadowsocks.rs
octo-squirrel/src/codec/shadowsocks/: aead.rs  aead_2022.rs  tcp.rs  udp.rs
octo-squirrel/src/codec/shadowsocks/aead_2022/: tcp.rs  udp.rs
octo-squirrel/src/codec/vmess/: aead.rs
octo-squirrel/src/common/: codec.rs  crypto.rs  manager.rs  network.rs  protocol.rs  relay.rs  util.rs
octo-squirrel/src/common/codec/: aead.rs  chunk.rs  shadowsocks.rs  vmess.rs
octo-squirrel/src/common/codec/aead/: shadowsocks.rs  vmess.rs
octo-squirrel/src/common/codec/shadowsocks/: aead.rs  aead_2022.rs  tcp.rs  udp.rs
octo-squirrel/src/common/codec/shadowsocks/aead_2022/: tcp.rs  udp.rs
octo-squirrel/src/common/codec/vmess/: aead.rs
octo-squirrel/src/common/manager/: packet_window.rs  shadowsocks.rs
octo-squirrel/src/common/protocol/: address.rs  network.rs  shadowsocks.rs  socks5.rs  trojan.rs  vmess.rs
octo-squirrel/src/common/protocol/shadowsocks/: udp.rs
octo-squirrel/src/common/protocol/socks5/: address.rs  codec.rs  handshake.rs  message.rs
octo-squirrel/src/common/protocol/vmess/: aead.rs  auth.rs  encoding.rs  header.rs  session.rs
octo-squirrel/src/common/protocol/vmess/aead/: auth_id.rs  encrypt.rs  kdf.rs
octo-squirrel/src/manager/: packet_window.rs
octo-squirrel/src/protocol/: address.rs  socks.rs  socks5.rs  trojan.rs  vmess.rs
octo-squirrel/src/protocol/socks5/: address.rs  codec.rs  handshake.rs  message.rs
octo-squirrel/src/protocol/vmess/: aead.rs  header.rs  session.rs
octo-squirrel/src/protocol/vmess/aead/: auth_id.rs  encrypt.rs  kdf.rs
test/: Cargo.toml
test/src/: tracing-client.rs  tracing-server.rs
test/src/benches/: encrypt.rs  read_bytes.rs
