[workspace]
resolver = "2"
members = [
    "octo-squirrel",
    "octo-squirrel-client",
    "octo-squirrel-server",
    "octo-squirrel-test",
]

[workspace.dependencies]
aead = { version = "0.5.2", features = ["bytes"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.95"
base64ct = { version = "1.6.0", features = ["alloc"] }
blake3 = "1.5.5"
byte_string = "1.0.0"
bytes = "1.10.0"
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
console-subscriber = "0.4.1"
crc = "3.2.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
digest = "0.10.7"
ecb = "0.1.2"
futures = "0.3.31"
generic-array = "1.2.0"
h2 = { version = "0.4" }
hickory-resolver = { version = "0.25.2", features = ["https-aws-lc-rs"] }
hkdf = "0.12.4"
hmac = "0.12.1"
http = "=1.1.0"
httparse = "1.10.0"
log = "0.4.25"
log4rs = "1.3.0"
lru_time_cache = "0.11.11"
md-5 = "0.10.6"
moka = "0.12.10"
quinn = { version = "0.11.7", features = ["runtime-tokio"] }
rand = { version = "0.9.0", features = ["small_rng"] }
rustls-platform-verifier = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tokio-websockets = { version = "0.11.1" }
uuid = { version = "1.13.1", features = ["v4"] }
