[workspace]
resolver = "2"
members = [
    "octo-squirrel",
    "octo-squirrel-client",
    "octo-squirrel-server",
    "octo-squirrel-test",
]

[workspace.dependencies]
aead = { version = "0.5.2", features = ["bytes"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64ct = { version = "1.8.0", features = ["alloc"] }
blake3 = "1.8.2"
byte_string = "1.0.0"
bytes = "1.10.1"
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
console-subscriber = "0.4.1"
crc = "3.3.0"
criterion = "0.6.0"
digest = "0.10.7"
ecb = "0.1.2"
futures = "0.3.31"
generic-array = "1.2.0"
h2 = "0.4"
hickory-resolver = "0.25.2"
hickory-client = "0.25.2"
hkdf = "0.12.4"
hmac = "0.12.1"
http = "1.3.1"
httparse = "1.10"
log = "0.4"
log4rs = "1.3.0"
lru_time_cache = "0.11"
md-5 = "0.10.6"
moka = "0.12.10"
quinn = { version = "0.11.8", features = ["runtime-tokio"] }
rand = { version = "0.9.1", features = ["small_rng"] }
rustls-platform-verifier = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.15", features = ["codec", "net"] }
tokio-websockets = "0.11.4"
uuid = { version = "1.17.0", features = ["v4"] }
