[package]
name = "octo-squirrel-client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octo-squirrel = { path = "../octo-squirrel", features = ["client"] }
aes-gcm.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
h2.workspace = true
hickory-resolver.workspace = true
http.workspace = true
httparse.workspace = true
log.workspace = true
lru_time_cache.workspace = true
moka.workspace = true
quinn.workspace = true
rand.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio-websockets = { workspace = true, features = ["client", "native-tls", "sha1_smol", "rand"] }
