[package]
name = "octo-squirrel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octo-squirrel = { path = "../octo-squirrel", features = ["server"] }
aes-gcm = "0.10.3"
anyhow = "1.0.88"
bytes = "1.7.1"
futures = "0.3.30"
futures-util = { version = "=0.3.30", features = ["unstable", "bilock"] }
log = "0.4.22"
log4rs = "1.3.0"
lru_time_cache = "0.11.11"
rand = { version = "0.8.5", features = ["small_rng"] }
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec", "net"] }
tokio-websockets = { version = "0.9.0", features = ["server", "native-tls", "sha1_smol"] }
#tokio-tungstenite = "*"
uuid = { version = "1.10.0", features = ["v4"] }