[package]
name = "octo-squirrel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octo-squirrel = { path = "../octo-squirrel", features = ["server"] }
aes-gcm = "0.10.3"
anyhow = "1.0.95"
bytes = "1.10.0"
futures = "0.3.31"
log = "0.4.25"
lru_time_cache = "0.11.11"
quinn = { version = "0.11.6", features = ["runtime-tokio"] }
rand = { version = "0.9.0", features = ["small_rng"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tokio-websockets = { version = "0.11.1", features = ["server", "native-tls", "sha1_smol"] }
