[package]
name = "octo-squirrel-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octo-squirrel = { path = "../octo-squirrel", features = ["server"] }
aes-gcm.workspace = true
anyhow.workspace = true
bytes.workspace = true
byte_string.workspace = true
futures.workspace = true
log.workspace = true
lru_time_cache.workspace = true
quinn.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio-websockets = { version = "0.11.1", features = ["server", "native-tls", "sha1_smol"] }
