[package]
name = "octo-squirrel-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octo-squirrel = { path = "../octo-squirrel", features = ["client", "server"] }
octo-squirrel-client = { path = "../octo-squirrel-client" }
octo-squirrel-server = { path = "../octo-squirrel-server" }
anyhow.workspace = true
console-subscriber.workspace = true
rand.workspace = true
tokio.workspace = true

[dev-dependencies]
bytes.workspace = true
criterion.workspace = true

[[bench]]
name = "encrypt"
harness = false

[[bench]]
name = "read_bytes"
harness = false
