[package]
name = "octo-squirrel-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octo-squirrel = { path = "../octo-squirrel", features = ["client", "server"] }
octo-squirrel-client = { path = "../octo-squirrel-client" }
octo-squirrel-server = { path = "../octo-squirrel-server" }
anyhow.workspace = true
bytes.workspace = true
console-subscriber.workspace = true
hickory-resolver.workspace = true
hickory-client = { version = "0.25.2", features = ["https-aws-lc-rs"] }
rand.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls-platform-verifier.workspace = true

[dev-dependencies]
bytes.workspace = true
criterion.workspace = true

[[bench]]
name = "encrypt"
harness = false

[[bench]]
name = "read_bytes"
harness = false
