[package]
name = "octo-squirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["bytes"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.86"
base64ct = { version = "1.6.0", features = ["alloc"] }
blake3 = "1.5.4"
byte_string = "1.0.0"
bytes = "1.7.1"
chacha20poly1305 = "0.10.1"
crc = "3.2.1"
dashmap = "5.5.3"
digest = "0.10.7"
ecb = "0.1.2"
futures = "0.3.30"
generic-array = "0.14.7"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4.22"
log4rs = "1.3.0"
lru_time_cache = "0.11.11"
md-5 = "0.10.6"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec", "net"] }
tokio-websockets = { version = "0.9.0" }
uuid = { version = "1.10.0", features = ["v4"] }

[features]
server = []
client = []
