[package]
name = "octo-squirrel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["bytes"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.95"
base64ct = { version = "1.6.0", features = ["alloc"] }
blake3 = "1.5.5"
byte_string = "1.0.0"
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
crc = "3.2.1"
digest = "0.10.7"
ecb = "0.1.2"
futures = "0.3.31"
generic-array = "1.2.0"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4.25"
log4rs = "1.3.0"
lru_time_cache = "0.11.11"
md-5 = "0.10.6"
quinn = { version = "0.11.6", features = ["runtime-tokio"] }
rand = { version = "0.9.0", features = ["small_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tokio-websockets = { version = "0.11.1" }
uuid = { version = "1.13.1", features = ["v4"] }

[features]
server = []
client = []
