[package]
name = "octo-squirrel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead.workspace = true
aes.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
base64ct.workspace = true
blake3.workspace = true
byte_string.workspace = true
chacha20poly1305.workspace = true
crc.workspace = true
digest.workspace = true
ecb.workspace = true
futures.workspace = true
generic-array.workspace = true
hkdf.workspace = true
hmac.workspace = true
log.workspace = true
log4rs.workspace = true
lru_time_cache.workspace = true
md-5.workspace = true
quinn.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-websockets.workspace = true
uuid.workspace = true

[features]
server = []
client = []
